--- a/styles/style.css
+++ b/styles/style.css
@@ -3,24 +3,7 @@
 .header {
   padding: 0.5em;
   border: solid black;
-  /*background-color: black;
-  color: white;*/
 }
-
-/*.header {
-height: 4em;
-padding-top: 0.5em;
-opacity: 0.5;
-background: black;
-border-top: 3px solid #ccc;
-border-bottom: 3px solid #ccc;
-margin-top: 1em;
-}*/
-
-/*h1.ontop {
-position: relative;
-top: 4.7em;
-}*/
 
 .my-pic {
   float: right;
@@ -29,7 +12,7 @@ top: 4.7em;
 }
 
 .top-nav ul {
-  /*text-decoration: none;*/
+  text-decoration: none;
   list-style: none;
   display: flex;
   justify-content: space-around;
