--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,12 @@ html {
   margin-top: -1.4em;
 }
 
+#home {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 /*@media(min-width: 700px){
   .top-nav{
     width: 49%;
